--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,7 @@ decorator==4.0.6
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8
-django-cors-headers==2.0.2
-django-storages-redux==1.3.2
+django-allauth==0.31.0
 docker-py==1.7.2
 dockerpty==0.4.1
 docopt==0.6.2
@@ -28,7 +27,6 @@ pyparsing==2.1.10
 python-dateutil==2.6.0
 python-decouple==3.0
 python-openid==2.2.5
-python-social-auth==0.2.14
 PyYAML==3.12
 requests==2.9.1
 requests-oauthlib==0.8.0
